# RTv1

./: README.md
raytrace/: CMakeLists.txt  Makefile  RTv1  author  camera_rotation.c  cone.c  cylinder.c  draw.c  ex.c  example  intersects.c  keys_linux.c  keys_mac.c  main.c  parse.c  parse_ex.c  parse_input.c  plane.c  rt.h  scene  sphere.c  vector_math.c  vector_math_dop.c
raytrace/lft/: Makefile  author  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_clamp.c  ft_isalpha.c  ft_isascii.c  ft_islower.c  ft_isupper.c  ft_itoa.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  (+22 more)
